# python-PR-assigner

./: main.py  pyproject.toml
application/ports/driven/: bitbucket_repository_port.py  pull_request_repository_port.py  rudo_repository_port.py  slack_repository_port.py
application/ports/driving/: bitbucket_service_port.py
application/services/: bitbucket_service.py
domain/: actor.py  branch.py  pull_request.py  repository.py  user.py  webhook_payload.py
driven/api_rest/: containers.py
driven/api_rest/v1/bitbucket/: adapter.py  mapper.py  models.py
driven/api_rest/v1/rudo/: adapter.py  mapper.py  models.py
driven/api_rest/v1/slack/: adapter.py
driven/db/pr_per_user/: adapter.py  mapper.py  models.py
driving/api_rest/v1/bitbucket/: adapter.py  mapper.py  models.py
infrastructure/di/bitbucket/: container.py
